# google-ads-mcp

./: .env.example  README.md  main.py  pyproject.toml
src/google_ads_mcp/: __main__.py  auth.py  config.py  server.py
src/google_ads_mcp/tools/: __init__.py  campaigns.py  customers.py  gaql.py  health.py
